interpreter/examples/bad/type/non_call1.dl
{
    int x.
    x = x(x)
}
